Fix Undo / Redo of annotation creation doesn't properly handle page rotation and adds undo unit tests

BUG: 318091
REVIEW: 109989